--- a/ariExpressDjango/templates/member.html
+++ b/ariExpressDjango/templates/member.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 		<h1>User Information</h1>
-		<p>Username: {{username}}</p>§
+		<p>Username: {{username}}</p>
 		<p>Email: {{email}}</p>
 		<p>Logged in: {{isLoggedIn}}</p>
 	<form action="{% url 'memberfound' %}" method="post">
