created a new app linked homepage and login (seperate apps)

--- a/ariExpressDjango/mainApp/templates/login copy.html
+++ b/ariExpressDjango/mainApp/templates/login copy.html
@@ -165,11 +165,11 @@
 			<input type="password" id="password" name="password"><br><br>
 			<input type="submit" value="Login">
 			<br><br>
-			<a href="{% url 'register_form' %}">Register</a>
+			<a>Register</a>
 			<br>
-			<a href="{% url 'homepage_guest' %}">Continue as Guest</a>
+			<a>Continue as Guest</a>
 			<br><br>
-			<a href="{% url 'reset_password' %}">Reset Password</a>
+			<a>Reset Password</a>
 			<p class="error-message">Incorrect username or password.</p>
 		</form>
 	</div>
