--- a/ariExpressDjango/mainApp/templates/login.html
+++ b/ariExpressDjango/mainApp/templates/login.html
@@ -1,62 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-	<title>My Website</title>
-</head>
-<body>
-	<header>
-		<h1>Welcome to My Website</h1>
-	</header>
-	<main>
-		<h2>About Us</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed sed lectus vel velit rhoncus pharetra euismod at metus. In in ipsum ac nibh fermentum eleifend vel id ex. Fusce id lacus a nisi ultrices ullamcorper. Aenean a sollicitudin felis, nec aliquam felis. Nam pharetra ex id ligula lobortis iaculis.</p>
-	</main>
-</body>
-</html> -->
-
-<!-- ------------------------------------------------------------------------------------------------------------ -->
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-	<title>AriExpress - Home</title>
-	<style>
-		/* center the login form */
-		 {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			border: 1px solid #ccc;
-			padding: 20px;
-			text-align: center;
-			max-width: 400px;
-			width: 100%;
-			box-sizing: border-box;
-		}
-	</style>
-</head>
-<body>
-	/*login form*/
-	<div class="login-form">
-		<h2>Login</h2>
-		<form>
-			<label for="username">Username:</label><br>
-			<input type="text" id="username" name="username"><br>
-			<label for="password">Password:</label><br>
-			<input type="password" id="password" name="password"><br><br>
-			<input type="submit" value="Login">
-			<br><br>
-			<a href="#">Register</a>
-			<br>
-			<a href="#">Reset Password</a>
-		</form>
-	</div>
-</body>
-</html> -->
-
-<!-- ------------------------------------------------------------------------------------------------------------ -->
-
 {% extends 'base.html' %}
 {% block content %}
 
@@ -172,21 +113,16 @@
 	<br>
 	<br>
 	<form>
-		<!-- <div class="mb-3">
+		<div class="mb-3">
 		  <label for="exampleInputEmail1" class="form-label">Email address</label>
 		  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 		</div>
 		<div class="mb-3">
 		  <label for="exampleInputPassword1" class="form-label">Password</label>
 		  <input type="password" class="form-control" id="exampleInputPassword1">
-		</div> -->
-		<form action="{% url 'mainApp:login' %}" method='post'>
-		<a href="{% url 'mainApp:login' %}" class="btn btn-primary">Login</a>
-		</form>
-
-		
+		</div>
+		<button type="submit" class="btn btn-primary">Login</button>
 	</form>
 	
 </body>
-</html>
 {% endblock %}
