login and registration pages are done #131

--- a/ariExpressDjango/mainApp/templates/login.html
+++ b/ariExpressDjango/mainApp/templates/login.html
@@ -115,7 +115,7 @@
 	<form method="post" action="{% url 'mainApp:login' %}">
 		<div class="mb-3">
 		  <label for="username" class="form-label">Username</label>
-		  <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp">
+		  <input type="text" class="form-control" id="username" name="username">
 		</div>
 		<div class="mb-3">
 		  <label for="password" class="form-label">Password</label>
