--- a/ariExpressDjango/templates/startpage.html
+++ b/ariExpressDjango/templates/startpage.html
@@ -182,7 +182,8 @@
 		</div> -->
 		<form action="{% url 'mainApp:login' %}" method='post'>
 		<a href="{% url 'mainApp:login' %}" class="btn btn-primary">Login</a>
-		</form>
+		<a href="{% url 'mainApp:registerPage' %}" class="btn btn-primary">Register</a>
+	</form>
 
 		
 	</form>
