--- a/ariExpressDjango/mainApp/templates/mainpage.html
+++ b/ariExpressDjango/mainApp/templates/mainpage.html
@@ -12,7 +12,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 	</head>
 <head>
-	<title>AriExpress - Register</title>
+	<title>AriExpress - Home</title>
 	<style>
 		body {
 			background-color: #f8f8f8;
@@ -107,33 +107,14 @@
 	</style>
 </head>
 <body>
-	<h1>AriExpress</h1>
+	<h1>AriExpress - Home</h1>
 	<br>
 	<br>
 	<br>
 	<br>
-	<form method="post" action="{% url 'mainApp:registerPage' %}">
-		<div class="mb-3">
-		  <label for="username" class="form-label">Username</label>
-		  <input type="text" class="form-control" id="username" name="username">
-		</div>
-		<div class="mb-3">
-		  <label for="password" class="form-label">Password</label>
-		  <input type="password" class="form-control" id="password" name="password">
-		</div>
-		<div class="mb-3">
-			<label for="email" class="form-label">Email Address</label>
-			<input type="email" class="form-control" id="email" name="email">
-		</div>
-			{% csrf_token %}
-			<button type="submit" class="btn btn-primary">Register</button>
-
-		<a>{{ msg }}</a>
-		{% if showMsg %}
-		<p>{{ msg }}</p>
-		{% endif %}
-		
-	</form>
+	
+	<label class="form-label">Welcome!</label>
+		  
 	
 
 	
