added for rubin

--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -18,8 +18,10 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
+                  {% if user.is_authenticated %}
                   <li><a class="dropdown-item" href="#">Shop Management</a></li>
-                  <li><a class="dropdown-item" href="#">My Shops</a></li>
+                  <li><a class="dropdown-item" href="{% url 'mainApp:myshops'%}">My Shops</a></li>
+                  {% endif %}
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
