--- a/ariExpressDjango/mainApp/templates/mainpage.html
+++ b/ariExpressDjango/mainApp/templates/mainpage.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% if user.is_authenticated %}
 <body>
-	<h1>helooooo</h1>
+	<h1>Hello, {{ user.username }}</h1>
 </body>
 {% else %}
   <p>You are not logged in</p>
