--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -1,3 +1,6 @@
+<style>
+  #navBarSearchForm {width:450px !important;}
+</style>
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -47,7 +50,7 @@
               </li> -->
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Search" id="navBarSearchForm" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
