--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -3,35 +3,90 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Inbox - Internet Market System</title>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    </head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+		<title>Bootstrap Example</title>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+		
+	</head>
 <body>
-	<header>
-		<nav>
-			<a href="#">Home</a>
-			<a href="#">Shop</a>
-			<a href="#">Cart</a>
-			<a href="#" class="active">Inbox</a>
-			<a href="#" class="notification"><i class="fas fa-bell"></i></a>
-		</nav>
-	</header>
 	<main>
 		<h1>Inbox</h1>
-		<ul>
-			{% for message in messages %}
-			<li>
-				<p>{{ message.sender }}</p>
-				<p>{{ message.subject }}</p>
-				<p>{{ message.body }}</p>
-				<p>{{ message.date }}</p>
-			</li>
-			{% endfor %}
-		</ul>
+		<div class = "col-lg-12 hide">
+			<div style = "margin-top: 20 px;">
+				<table class = "table table-sm">
+					<thead class = "table secondary">
+						<tr>
+							<th style = "width: 20%;">Name</th>
+							<th style = "width: 50%;">Subject</th>
+							<th style = "width: 10%;">Recived on</th>
+							<th style = "width: 10%;">Status</th>
+							<th style = "width: 10%; text align: center;" colspan="2">Actions</th>
+						</tr>
+					</thead>
+				</table>
+			</div>
+		</div>
+		<div>
+			<button type="button "class="btn text-light" data-bs-toggle="modal" data-bs-target="#composeMessage" style = "background-color: #0074fe; position: absolute; bottom: 50px; right: 50px;">
+				<i class = "fas fa-envelope fa-2x"></i>
+			</button>
+
+			<!--Modal-->
+			<div class="modal fade" id="composeMessage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h1 class="modal-title fs-5" id="exampleModalLabel">
+								<i class="fas fa-envelope-open-text"></i>Message
+							</h1>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<form method = "POST" action="#" autocomplete="off" encrypte="multipart/from-data"> 
+							{% csrf_token %}
+							<div class="modal-body">
+								<div class = "mb-1">
+									<p>From: {{username}}</p> 
+								</div>
+								<div class = "mb-1">
+									<label for="addressee" class="form-label">To:</label>
+									<input type = "text" class = "form-control" id = "addressee" name = "addressee" maxlength = "40" placeholder = "addressee username" required> 
+									<hr>
+									<label for="subject" class="form-label">Subject:</label>
+									<input type = "text" class = "form-control" id="subject" name = "subject" maxlength = "40" placeholder = "Subject" required> 
+							   </div>
+								<hr>
+								<div class="form-group mb-2">
+									<label for="usermassage" class="form-label">content:</label>
+									<textarea class="form-control" name="message" id="usermassage" rows="10" maxlength="1000" required></textarea>
+								</div>
+								<!-- cahracter remaining counter-->
+								<span id="remaining"></span>
+								<hr>
+								<div class="form-control mb-3">
+									<input class="form control" type="file" name="file" id="file">
+								</div>
+								<hr>
+								<div class="d-grid gap-2 mt-3">
+									<button class="btn text-light" type="submit" style="background-color:#0074fe">Send message &nbsp;&nbsp;<i class="fas fa-paper-plane"></i></button>
+								</div>
+							</div>
+							<input type="hidden" value="Pending" name="status">
+						</form>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
 	</main>
+	
+
 </body>
 </html>
 
