--- a/ariExpressDjango/templates/base.html
+++ b/ariExpressDjango/templates/base.html
@@ -6,6 +6,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
 </head>
 <head>
 <title>AriExpress - Home</title>
