--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -1,22 +1,26 @@
 
-
-
-{% extends 'base.html' %}
-{% block content %}
 <style>
-  h1 {
+  .specialh1 {
   position: absolute;
   top: 12%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+  }
+  .form-select, .userSelect {
+    width: 300px;
+
+  }
 </style>
+
+{% extends 'base.html' %}
+{% block content %}
+
 <head>
     <title>{{ shopname }}</title>
   </head>
   <body>
 
-    <h1>{{ shopname }}</h1>
+    <h1 class="specialh1">{{ shopname }}</h1>
     <br>
     <br>
     <br>
@@ -32,9 +36,9 @@
         <p>{{ context_key }}: {{ context_data }}</p>
       {% endif %}
     {% endfor %}
+    <form method="post" action="{% url 'mainApp:nominateUser' shopname %}">
+			{% csrf_token %}
+      <button type="submit" class="btn btn-primary">Nominate</button>
+    </form>
     </body>
-    
-
-
-
 {% endblock %}
