--- a/ariExpressDjango/templates/base.html
+++ b/ariExpressDjango/templates/base.html
@@ -14,7 +14,11 @@
 
 {% if messages %}  
     {% for message in messages %}  
-        {{ message }}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>    
+        
     {% endfor %}  
 {% endif %}  
 
