--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -1,5 +1,7 @@
 <style>
   #navBarSearchForm {width:450px !important;}
+  #admintag {background-color: #FF0000 !important; 
+    color: #FFFFFF !important;}
 </style>
 <body>
 	<nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -48,6 +50,12 @@
               <!-- <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
               </li> -->
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" id="admintag" href="#">ADMIN</a>
+              </li>
+              {% endif %}
+
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" id="navBarSearchForm" aria-label="Search">
