--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -50,7 +50,7 @@
               <!-- <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
               </li> -->
-              {% if user.is_authenticated %}
+              {% if user.is_superuser %}
               <li class="nav-item">
                 <a class="nav-link" id="admintag" href="#">ADMIN</a>
               </li>
