--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -49,7 +49,7 @@
 							{% csrf_token %}
 							<div class="modal-body">
 								<div class = "mb-1">
-									<p>From: {{username}}</p> 
+									<p>From: {{user.username}}</p> 
 								</div>
 								<div class = "mb-1">
 									<label for="addressee" class="form-label">To:</label>
