--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -101,7 +101,25 @@
 								</div>
 								<hr>
 								<div class="form-control mb-3">
-									<input class="form control" type="file" name="file" id="file">
+									<input class="form control" type="file" name="file" id="file" oninput="fileValidation()">
+									<script>
+										function fileValidation() {
+											var fileInput = document.getElementById('file');
+											var filePath = fileInput.value;
+											var fileSize = fileInput.files[0].size;
+											if (fileSize > 2097152) {
+												swal("File size is too big!", "File size is more than 2MB", "error");
+												this.value = "";
+												return false;
+											};
+											var allowedExtensions = /(\.jpg|\.jpeg|\.png)$/i;
+											if(!allowedExtensions.exec(filePath)){
+												swal("format error!", "Please upload file having extensions .jpeg/.jpg/.png only.", "error");
+												fileInput.value = '';
+												return false;
+											};
+										} 
+									</script>
 								</div>
 								<hr>
 								<div class="d-grid gap-2 mt-3">
