--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -24,6 +24,7 @@
 <body>
 	<main>
 		<h1>Inbox</h1>
+		<!--Table of messages-->
 		<div class = "col-lg-12 hide">
 			<div style = "margin-top: 20 px;">
 				<table class = "table table-sm">
@@ -35,12 +36,35 @@
 							<th style = "width: 10%;">Status</th>
 							<th style = "width: 10%; text align: center;" colspan="2">Actions</th>
 						</tr>
+						{% for usermessage in usermessages %}
+						<tr> 
+							<td>{{usermassage.sender}}</td>
+							<td>{{usermassage.subject}}</td>
+							<td>{{usermassage.creation_date | date:'m/d/y (H:i'}}</td>
+
+							<td>{{usermassage.status}}</td>
+
+							<td>
+								<button class="btn btn-secondary btn-sm btn-action" title="Delete message">
+									<i class="fas fa-trash-alt"></i>
+								</button>
+							</td>
+							<td>
+								<button class="btn text-light btn-sm btn-action" title="Read message" style="background-color:#0074fe;">
+									<i class="fas fa-envelope"></i>
+								</button>
+							</td>
+
+
+
+						</tr>
+						{% endfor %}
 					</thead>
 				</table>
 			</div>
 		</div>
 		<div>
-			<button type="button "class="btn text-light" data-bs-toggle="modal" data-bs-target="#composeMessage" style = "background-color: #0074fe; position: absolute; bottom: 50px; right: 50px;">
+			<button type="button" class="btn text-light" data-bs-toggle="modal" data-bs-target="#composeMessage" style = "background-color: #0074fe; position: absolute; bottom: 50px; right: 50px;">
 				<i class = "fas fa-envelope fa-2x"></i>
 			</button>
 
@@ -54,9 +78,9 @@
 							</h1>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
-						<form method = "POST" action="#" autocomplete="off" encrypte="multipart/from-data"> 
+						<form method = "POST" action="send_message" class="was-validated" autocomplete="off" encrypte="multipart/from-data"> 
 							{% csrf_token %}
-							<div class="modal-body">
+							<div class="modal-body text-center">
 								<div class = "mb-1">
 									<p>From: {{user.username}}</p> 
 								</div>
