--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -80,9 +80,9 @@
 						</div>
 						<form method = "POST" action="send_message" class="was-validated" autocomplete="off" encrypte="multipart/from-data"> 
 							{% csrf_token %}
-							<div class="modal-body text-center">
+							<div class="modal-body">
 								<div class = "mb-1">
-									<p>From: {{user.username}}</p> 
+									<p>From: {{user.username}} </p> 
 								</div>
 								<div class = "mb-1">
 									<label for="addressee" class="form-label">To:</label>
