--- a/ariExpressDjango/mainApp/templates/adminPage.html
+++ b/ariExpressDjango/mainApp/templates/adminPage.html
@@ -11,7 +11,18 @@
     transform: translate(-50%, -50%);
   }
 </style>
+
+
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+	   
+		
+</head>
+  
     <title>Admin Area</title>
   </head>
   <body>
@@ -24,16 +35,46 @@
     <br>
     <form method="post" action="#">
       {% csrf_token %}
-      <button type="submit" class="btn btn-primary" id="button">View Transaction History</button>
+      <button type="submit" class="btn btn-primary" id="button" data-toggle="modal">View Transaction History</button>
     </form>
 
+    
+
+</head>
+
+
+
+
+
+    
 
     {% if context.online or context.offline%}
       <br><br>
       <h2>Online Users</h2>
+      
       <ul>
         {% for user in context.online %}
-          <li>{{ user }}</li>
+        <div class="container">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title" id="myModalLabel">User Information</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                      <div class="modal-body">
+                          <p>{{ user }}</p>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+        <a  data-toggle="modal" data-target="#myModal"><li>{{ user }}</li></a>
         {% empty %}
           <li>No online users.</li>
         {% endfor %}
@@ -42,7 +83,27 @@
       <h2>Offline Users</h2>
       <ul>
         {% for user in context.offline %}
-          <li>{{ user }}</li>
+        <div class="container">
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title" id="myModalLabel">User Information</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                          </button>
+                      </div>
+                      <div class="modal-body">
+                          <p>{{ user }}</p>
+                      </div>
+                      <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+        <a  data-toggle="modal" data-target="#myModal"><li>{{ user }}</li></a>
         {% empty %}
         <li>No offline users.</li>
         {% endfor %}
