--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -41,7 +41,7 @@
               </li>
               <li class= "nav-item">
                 <a class = "nav-link" href="{% url 'mainApp:inbox' %}">
-                  <i class = "fas fa-bell"></i><span class = "pending">2</span>
+                  <i class = "fas fa-bell"></i><span class = "pending">{{usermessages.number}}</span>
                 </a>
               </li>
               {% else %}
