deleteing messages functionality

--- a/ariExpressDjango/mainApp/templates/messages/delete.html
+++ b/ariExpressDjango/mainApp/templates/messages/delete.html
@@ -22,6 +22,6 @@
 
 <!--Modal footer-->
 {% block modal-footer %}
-<a href="/delete_message/{{ usermessage.pk }}" class="btn btn-outline-danger btn-sm btn-modal"> Delete</a>
+<a href="/delete_message/{{ usermessage.id }}" class="btn btn-outline-danger btn-sm btn-modal"> Delete</a>
 {% endblock modal-footer %}
 
