--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -43,9 +43,12 @@
 					<tr style="background-color:#f3f8ff;"> 
 						<td>{{ usermessage.sender }}</td>
 						<td>{{ usermessage.subject }}</td>
-						<td>{{ usermessage.creation_date | date:'m/d/y (H:i' }}</td>
-
-						<td>{{ usermessage.status }}</td>
+						<td>{{ usermessage.creation_date | date:'m/d/y (H:i)' }}</td>
+						{% if usermessage.status == 'pending' %}
+						<td clas="text-danger" style="color: red">{{ usermessage.status }}</td>
+						{% else %}
+						<td "color: black">{{ usermessage.status }}</td>
+						{% endif %}
 
 						<td>
 							<button class="btn btn-secondary btn-sm btn-action" title="Delete message" data-bs-toggle="modal" data-bs-target="#deleteModal{{ usermessage.pk }}">
@@ -53,7 +56,7 @@
 							</button>
 						</td>
 						<td>
-							<button class="btn text-light btn-sm btn-action" title="Read message" style="background-color:#0074fe;">
+							<button class="btn text-light btn-sm btn-action" title="Read message" style="background-color:#0074fe;" data-bs-toggle="modal" data-bs-target="#readModal{{ usermessage.pk }}">
 								<i class="fas fa-envelope"></i>
 							</button>
 						</td>
@@ -61,6 +64,10 @@
 
 					<!--Delete message button functionality-->
 					{% include 'messages/delete.html' %}
+					<!--Read message button functionality-->
+					{% include 'messages/read.html' %}
+					<!--Mark message button functionality-->
+					{% include 'messages/mark.html' %}
 
 					{% endfor %}	
 				</table>
@@ -72,6 +79,32 @@
 				<i class = "fas fa-envelope fa-2x"></i>
 			</button>	
 		</div>
+
+		{% if open_modal %}
+		<!--Message Modal-->
+		<div class="modal fade show" id="messageModal" tabindex="-1" role="dialog" aria-labelledby="messageModalLabel"
+			aria-hidden="true" style="display: block;">
+			<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<!-- ... existing code ... -->
+					</div>
+					<div class="modal-body">
+						<!-- Display error message here -->
+						<div class="alert alert-danger">
+							{{ form.errors.receiver }}
+						</div>
+						{% include 'messages/message.html' %}
+					</div>
+					<div class="modal-footer">
+						<!-- ... existing code ... -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="modal-backdrop fade show"></div>
+		{% endif %}
+
 		<!--Pagination-->
 		<nav>
 			{% if usermessages.has_other_pages %}
@@ -102,7 +135,4 @@
 	</main>
 </body>
 </html>
-
-
-
 {% endblock%}
