--- a/ariExpressDjango/mainApp/templates/messages/baseModal.html
+++ b/ariExpressDjango/mainApp/templates/messages/baseModal.html
@@ -1,22 +1,22 @@
-<div class="modal fade" {% block modal-id %}{% endblock modal-id %} tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">
-            {% block modal-title %}{% endblock modal-title %}
-          </h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        {% block form %}
-        <div class="modal-body text-center">
-            {% block modal-body %}{% endblock modal-body %}
-        </div>
-        {% endblock form %}
-        <div class="modal-footer">
-          {% block close %}<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> {% endblock close %}
-          {% block modal-footer %}{% endblock modal-footer %}
-        </div>
+<div class="modal fade {% block modal-size%}{% endblock modal-size %}" {% block modal-id %}{% endblock modal-id %} tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">
+          {% block modal-title %}{% endblock modal-title %}
+        </h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      {% block form %}
+      <div class="modal-body text-center">
+          {% block modal-body %}{% endblock modal-body %}
+      </div>
+      {% endblock form %}
+      <div class="modal-footer">
+        {% block close %}<button type="button" class="btn btn-secondary btn-sm btn-modal" data-bs-dismiss="modal"> Close </button> {% endblock close %}
+        {% block modal-footer %}{% endblock modal-footer %}
       </div>
     </div>
   </div>
+</div>
   
