--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -1,4 +1,18 @@
 
+{% extends 'base.html' %}
+
+{% block content %}
+<head>
+  <title>{{ storename }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
+
+</head>
 <style>
   .specialh1 {
   position: absolute;
@@ -11,32 +25,42 @@
 
   }
 </style>
-
-{% extends 'base.html' %}
-{% block content %}
-
-<head>
-    <title>{{ shopname }}</title>
-  </head>
+  
   <body>
 
-    <h1 class="specialh1">{{ shopname }}</h1>
+    <h1 class="specialh1">{{ storename }}</h1>
     <br>
     <br>
     <br>
-    {% for context_key, context_data in context.items %}
-      {% if context_data is dict %}
-        <p>{{ context_key }}:</p>
-        <ul>
-          {% for inner_key, inner_data in context_data.items %}
-            <li>{{ inner_key }}: {{ inner_data }}</li>
-          {% endfor %}
-        </ul>
-      {% else %}
-        <p>{{ context_key }}: {{ context_data }}</p>
-      {% endif %}
-    {% endfor %}
-    <form method="post" action="{% url 'mainApp:nominateUser' shopname %}">
+
+    <table class="table table-hover">
+      <tr class="table-light">
+          <th>Product ID</th>
+          <th>Name</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th>Categories</th>
+          <th>Actions</th>
+      </tr>
+
+      {% for product_id, product in products.items %}
+        <tr>
+            <td>{{ product.product_id }}</td>
+            <td>{{ product.name }}</td>
+            <td>{{ product.quantity }}</td>
+            <td>{{ product.price }}</td>
+            <td>{{ product.categories }}</td>
+            <td>
+              <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-outline-dark">Edit</button>
+                <button type="button" class="btn btn-outline-dark">Remove</button>
+              </div>
+            </td>
+        </tr>
+      {% endfor %}
+    </table>
+
+    <form method="post" action="{% url 'mainApp:nominateUser' storename %}">
 			{% csrf_token %}
       <button type="submit" class="btn btn-primary">Nominate</button>
     </form>
