marking message as read functionality fix and showing messages in inbox fix - still need to connect the inbox to the  backend database

--- a/ariExpressDjango/mainApp/templates/messages/read.html
+++ b/ariExpressDjango/mainApp/templates/messages/read.html
@@ -7,7 +7,7 @@ modal-lg
 
 
 <!--Modal ID-->
-{% block modal-id %} id="readModal{{ usermessage.pk }}"{% endblock modal-id %}
+{% block modal-id %} id="readModal{{ usermessage.pk }}" data-bs-backdrop="static" data-bs-keyboard="false" {% endblock modal-id %}
 
 
 <!--Modal title-->
