--- a/ariExpressDjango/mainApp/templates/messages/mark.html
+++ b/ariExpressDjango/mainApp/templates/messages/mark.html
@@ -26,13 +26,12 @@
 
 <!--Modal footer-->
 {% block modal-footer %}
-<a href="/mark_as_read/{{ usermessage.id }}" class="btn text-light btn-sm btn-modal" style="background-color: #0074fe;">Yes</a>
-<button type="button" class="btn btn-outline-dark btn-sm " id="closeAllModals" data-bs-dismiss="modal" aria-label="Close"> No 
-    <script>
-        $('#closeAllModals').on('click', function() {
-            $('.modal').modal('hide');
-        });
-    </script>
-</button>
+<a href="mark_as_read/{{ usermessage.id }}" class="btn text-light btn-sm btn-modal" style="background-color: #0074fe;">Yes</a>
+<button type="button" class="btn btn-outline-dark btn-sm " id="closeAllModals" data-bs-dismiss="modal" aria-label="Close"> No </button>
+<script>
+    $('#closeAllModals').on('click', function() {
+        $(this).closest('.modal').modal('hide');
+    });
+</script>
 
 {% endblock modal-footer %}
