--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -43,7 +43,7 @@
               <li class= "nav-item">
                 <a class = "nav-link" href="{% url 'mainApp:inbox' %}">
                   <i class = "fas fa-bell"></i>
-                  <span class = "pending" id="notification">{{usermessages.number}}</span>
+                  <span class = "pending" id="notification"></span>
                   <script>
                       $(document).ready(function() {
                           const socket = new WebSocket('ws://localhost:8000/ws/notifications/');
