--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -40,7 +40,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 {% if user.is_authenticated %}
-                                <li><a class="dropdown-item" href="{% url 'mainApp:myshops'%}">My Shops</a></li>
+                                <li><a class="dropdown-item" href="{% url 'mainApp:mystores'%}">My Stores</a></li>
                                 {% endif %}
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Action</a></li>
