done with issue

--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -41,6 +41,8 @@
                             <ul class="dropdown-menu">
                                 {% if user.is_authenticated %}
                                 <li><a class="dropdown-item" href="{% url 'mainApp:mystores'%}">My Stores</a></li>
+                                <li><a class="dropdown-item" href="{% url 'mainApp:viewAllStores'%}">All Stores</a></li>
+                                <li><a class="dropdown-item" href="{% url 'mainApp:createStore'%}">Create a new Store</a></li>
                                 {% endif %}
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Action</a></li>
