--- a/ariExpressDjango/templates/header.html
+++ b/ariExpressDjango/templates/header.html
@@ -66,6 +66,11 @@
                             <a class="nav-link" href="{% url 'mainApp:registerPage' %}">Register</a>
                         </li>
                         {% endif %}
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'mainApp:cart' %}">
+                              <i class="fas fa-shopping-cart"></i>
+                          </a>
+                        </li>
                         {% if user.is_superuser %}
                         <li class="nav-item">
                             <a class="nav-link admin-tag" href="{% url 'mainApp:adminPage' %}">ADMIN</a>
