added "add new product" functionality

--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -73,6 +73,10 @@
         {% csrf_token %}
         <button type="submit" class="btn btn-primary me-2">Close Store</button>
       </form>
+      <form method="post" action="{% url 'mainApp:addNewProduct' storename %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary me-2">Add new product</button>
+      </form>
     </div>
     </body>
 {% endblock %}
