--- a/ariExpressDjango/mainApp/templates/mystores.html
+++ b/ariExpressDjango/mainApp/templates/mystores.html
@@ -46,7 +46,7 @@
           <form method="post" action="{% url 'mainApp:mystores_specific' store.store_name %}">
             {% csrf_token %}
             <input type="hidden" name="data" value="{{ store_data }}">
-            <button type="submit" class="link-button">{{ store.store_name }}</button>
+            <button type="submit" class="link-button" name="storeNameClick">{{ store.store_name }}</button>
           </form>
         </td>
         <td>{{ store.active }}</td>
