--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -13,26 +13,12 @@
     <script src="https://kit.fontawesome.com/a46df6f46f.js" crossorigin="anonymous"></script>
 
 </head>
-<style>
-  .specialh1 {
-  position: absolute;
-  top: 12%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  }
-  .form-select, .userSelect {
-    width: 300px;
 
-  }
-</style>
   
   <body>
 
     <h1 class="specialh1">{{ storename }} - {{ active }}</h1>
     <br>
-    <br>
-    <br>
-
     <table class="table table-hover">
       <tr class="table-light">
           <th>Product ID</th>
@@ -52,8 +38,16 @@
             <td>{{ product.categories }}</td>
             <td>
               <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-outline-dark">Edit</button>
-                <button type="button" class="btn btn-outline-dark">Remove</button>
+                <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="product_id" value="{{ product.product_id }}">
+                    <button type="submit" class="btn btn-outline-dark" name="editProduct">Edit</button>
+                </form>
+                <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="product_id" value="{{ product.product_id }}">
+                    <button type="submit" class="btn btn-outline-dark" name="removeProduct">Remove</button>
+                </form>
               </div>
             </td>
         </tr>
@@ -65,13 +59,13 @@
         {% csrf_token %}
         <button type="submit" class="btn btn-primary me-2">Nominate</button>
       </form>
-      <form method="post" action="{% url 'mainApp:openStore' storename %}">
+      <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary me-2">Open Store</button>
+        <button type="submit" class="btn btn-primary me-2" name="openStore">Open Store</button>
       </form>
-      <form method="post" action="{% url 'mainApp:closeStore' storename %}">
+      <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary me-2">Close Store</button>
+        <button type="submit" class="btn btn-primary me-2" name="closeStore">Close Store</button>
       </form>
       <form method="post" action="{% url 'mainApp:addNewProduct' storename %}">
         {% csrf_token %}
