--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -38,11 +38,16 @@
             <td>{{ product.categories }}</td>
             <td>
               <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
+                <form method="post" action="{% url 'mainApp:editProduct' storename %}">
                     {% csrf_token %}
                     <input type="hidden" name="product_id" value="{{ product.product_id }}">
-                    <button type="submit" class="btn btn-outline-dark" name="editProduct">Edit</button>
+                    <input type="hidden" name="product_name" value="{{ product.name }}">
+                    <input type="hidden" name="product_quantity" value="{{ product.quantity }}">
+                    <input type="hidden" name="product_price" value="{{ product.price }}">
+                    <input type="hidden" name="product_categories" value="{{ product.categories }}">
+                    <button type="submit" class="btn btn-outline-dark">Edit</button>
                 </form>
+
                 <form method="post" action="{% url 'mainApp:mystores_specific' storename %}">
                     {% csrf_token %}
                     <input type="hidden" name="product_id" value="{{ product.product_id }}">
