trying to fix edit product

--- a/ariExpressDjango/mainApp/templates/editProduct.html
+++ b/ariExpressDjango/mainApp/templates/editProduct.html
@@ -32,7 +32,7 @@
 				<input type="productPrice" name="productPrice" class="form-control" id="floatingInput" placeholder="5" value="{{ product_price }}">
 				<label for="floatingInput">Price</label>
 			</div>
-			<button type="submit" class="btn btn-primary">Edit</button>
+			<button type="submit" class="btn btn-primary" name="editButton">Edit</button>
 		</form>
 	</body>
 {% endblock %}
