small fix to nominate user page

--- a/ariExpressDjango/mainApp/templates/nominateUser.html
+++ b/ariExpressDjango/mainApp/templates/nominateUser.html
@@ -4,12 +4,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <style>
-  .specialh1 {
-  position: absolute;
-  top: 12%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  }
+
   .form-select, .userSelect {
     width: 300px;
 
@@ -20,9 +15,7 @@
   </head>
   <body>
 
-    <h1 class="specialh1">Nominate User - "{{ storename }}" Store</h1>
-    <br>
-    <br>
+    <h1>Nominate User - "{{ storename }}" Store</h1>
     <br>
     
     <h2>Nominate a new staff member:</h2>
