add "simple" discount implemented

--- a/ariExpressDjango/mainApp/templates/shop_specific.html
+++ b/ariExpressDjango/mainApp/templates/shop_specific.html
@@ -76,6 +76,10 @@
         {% csrf_token %}
         <button type="submit" class="btn btn-primary me-2">Add new product</button>
       </form>
+      <form method="post" action="{% url 'mainApp:addNewDiscount' storename %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary me-2">Add new discount</button>
+      </form>
     </div>
     </body>
 {% endblock %}
