--- a/ariExpressDjango/templates/base.html
+++ b/ariExpressDjango/templates/base.html
@@ -23,6 +23,12 @@
                 {{ message }}
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            <script>
+                // Remove the alert after 10 seconds
+                setTimeout(function() {
+                    $('.alert').alert('close');
+                }, 10000);
+            </script>
         {% endfor %}
     {% endif %}
 
